--- a/Animation/index.html
+++ b/Animation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="animation"></div>
-    <div class="combined_animation"></div>
+    <div class="elem"></div>
     <button class="start_button">Запустить анимацию</button>
     <script src="./script.js"></script>
 </body>
